JVM metrics: GC.